--- a/Notebook_posts/_config.yml
+++ b/Notebook_posts/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name:
+name:  Felister Chepkemoi
 
 # Short bio or description (displayed in the header)
-description:
+description: open lab notebook,sharing my research, thoughts and projects. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ""
+avatar: "https://avatars.githubusercontent.com/u/211861176?s=400&u=50977d2133ea0ed353c15e6080433c070c058969&v=4"
 
 #
 # Flags below are optional
@@ -18,14 +18,14 @@ avatar: ""
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: felisterchepkemoi54@gmail.com
   facebook:
   flickr:
-  github:
+  github: Fellymemoi
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: # Marine Biology student at University of Haifa
   twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube:  # channel/<your_long_string> or user/<user-name>
@@ -39,48 +39,12 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Your website URL : http://Fellymemoi.github.io 
 # Used for Sitemap.xml and your RSS feed
-url: ""
+url: "http://Fellymemoi.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/"
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+baseurl: "/Fellymemoi-Notebook"
